<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Filminder</string>
    <string name="action_settings">Ajustes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Títulos de navegación -->
    <string name="title_home">Inicio</string>
    <string name="title_search">Buscar</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_surprise">¡Sorpréndeme!</string>

    <!-- Textos de la pantalla de inicio -->
    <string name="popular_movies">Películas Populares</string>
    <string name="top_rated_movies">Mejor Valoradas</string>
    <string name="upcoming_movies">Próximos Estrenos</string>

    <!-- Textos de la pantalla de descubrimiento -->
    <string name="genres_title">Géneros</string>
    <string name="rating_title">Valoración</string>
    <string name="find_movie_button">¡Descubrir Película!</string>

    <!-- Textos de la pantalla de guardados -->
    <string name="no_saved_movies">No hay películas guardadas</string>

    <!-- Search -->
    <string name="search_hint">Buscar películas...</string>

    <!-- Content Descriptions -->
    <string name="movie_poster">Póster de la película</string>
    <string name="movie_backdrop">Imagen de fondo de la película</string>
    <string name="release_date">Fecha de estreno</string>
    <string name="overview">Sinopsis</string>

    <!-- Acciones -->
    <string name="see_more">Ver más</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="search_results">Resultados de búsqueda</string>

    <string name="add_to_favorites">Añadir a favoritos</string>
    <string name="remove_from_favorites">Eliminar de favoritos</string>
    <string name="added_to_favorites">Película añadida a favoritos</string>
    <string name="removed_from_favorites">Película eliminada de favoritos</string>

    <string name="back">Volver</string>

    <!-- Filtros de Sorpréndeme -->
    <string name="filters_title">Filtros</string>
    <string name="rating_filter">Nota media mínima</string>
    <string name="genre_filter">Género</string>
    <string name="provider_filter">Servicio de streaming</string>
    <string name="surprise_me">¡Sorpréndeme!</string>
    <string name="clear_filters">Limpiar filtros</string>
    <string name="no_movies_found">No se encontraron películas con estos filtros</string>
</resources>